@@ -3,14 +3,18 @@ package br.edu.famapr.AppFamapr.service;
 import br.edu.famapr.AppFamapr.dto.avaliacao.AvaliacaoRequestDTO;
 import br.edu.famapr.AppFamapr.dto.avaliacao.AvaliacaoResponseDTO;
 import br.edu.famapr.AppFamapr.mapper.AvaliacaoMapper;
+import br.edu.famapr.AppFamapr.mapper.AvaliacaoPerguntaMapper;
 import br.edu.famapr.AppFamapr.model.Avaliacao;
+import br.edu.famapr.AppFamapr.model.AvaliacaoPergunta;
+import br.edu.famapr.AppFamapr.model.Disciplina;
 import br.edu.famapr.AppFamapr.model.Matricula;
 import br.edu.famapr.AppFamapr.repository.AvaliacaoRepository;
 import br.edu.famapr.AppFamapr.repository.MatriculaRepository;
+import jakarta.transaction.Transactional;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -18,55 +22,71 @@ public class AvaliacaoService {
 
     private final AvaliacaoRepository avaliacaoRepository;
     private final MatriculaRepository matriculaRepository;
-    private final AvaliacaoMapper avaliacaoMapper;
 
-    public AvaliacaoService(AvaliacaoRepository avaliacaoRepository,
-                            MatriculaRepository matriculaRepository,
-                            AvaliacaoMapper avaliacaoMapper) {
+    public AvaliacaoService(
+            AvaliacaoRepository avaliacaoRepository,
+            MatriculaRepository matriculaRepository
+    ) {
         this.avaliacaoRepository = avaliacaoRepository;
         this.matriculaRepository = matriculaRepository;
-        this.avaliacaoMapper = avaliacaoMapper;
+    }
+
+    @Transactional
+    public AvaliacaoResponseDTO create(AvaliacaoRequestDTO dto) {
+
+        Matricula matricula = matriculaRepository.findById(dto.getMatriculaId())
+                .orElseThrow(() -> new RuntimeException("Matrícula não encontrada"));
+
+        Avaliacao avaliacao = AvaliacaoMapper.toEntity(dto, matricula);
+
+        if (avaliacao.getPerguntas() != null) {
+            avaliacao.getPerguntas().forEach(p -> p.setAvaliacao(avaliacao));
+        }
+
+        Avaliacao saved = avaliacaoRepository.save(avaliacao);
+        return AvaliacaoMapper.toResponseDTO(saved);
+    }
+
+
+    public AvaliacaoResponseDTO findById(Integer id) {
+        Avaliacao avaliacao = avaliacaoRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Avaliação não encontrada"));
+
+        return AvaliacaoMapper.toResponseDTO(avaliacao);
     }
 
     public List<AvaliacaoResponseDTO> findAll() {
         return avaliacaoRepository.findAll()
                 .stream()
                 .map(AvaliacaoMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public Optional<AvaliacaoResponseDTO> findById(Integer id) {
-        return avaliacaoRepository.findById(id)
-                .map(AvaliacaoMapper::toResponseDTO);
-    }
+    @Transactional
+    public AvaliacaoResponseDTO update(Integer id, AvaliacaoRequestDTO dto) {
 
-    public AvaliacaoResponseDTO create(AvaliacaoRequestDTO dto) {
-        Matricula matricula = matriculaRepository.findById(dto.getMatriculaId())
-                .orElseThrow(() -> new RuntimeException("Matrícula não encontrada"));
+        Avaliacao existente = avaliacaoRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Avaliação não encontrada"));
 
-        Avaliacao avaliacao = AvaliacaoMapper.toEntity(dto, matricula);
+        existente.setTipoAvaliacao(dto.getTipoAvaliacao());
+        existente.getPerguntas().clear();
 
-        return avaliacaoMapper.toResponseDTO(avaliacaoRepository.save(avaliacao));
-    }
-
-    public Optional<AvaliacaoResponseDTO> update(Integer id, AvaliacaoRequestDTO dto) {
-        return avaliacaoRepository.findById(id).map(existing -> {
-            existing.setDataAvaliacao(dto.getDataAvaliacao());
-            if (dto.getMatriculaId() != null) {
-                Matricula matricula = matriculaRepository.findById(dto.getMatriculaId())
-                        .orElseThrow(() -> new RuntimeException("Matrícula não encontrada"));
-                existing.setMatricula(matricula);
-            }
-            Avaliacao atualizado = avaliacaoRepository.save(existing);
-            return avaliacaoMapper.toResponseDTO(atualizado);
-        });
-    }
-
-    public boolean delete(Integer id) {
-        if (avaliacaoRepository.existsById(id)) {
-            avaliacaoRepository.deleteById(id);
-            return true;
+        if (dto.getPerguntas() != null) {
+            dto.getPerguntas().forEach(perguntaDTO -> {
+                AvaliacaoPergunta pergunta = AvaliacaoPerguntaMapper.toEntity(perguntaDTO, existente);
+                existente.getPerguntas().add(pergunta);
+            });
         }
-        return false;
+
+        Avaliacao atualizado = avaliacaoRepository.save(existente);
+        return AvaliacaoMapper.toResponseDTO(atualizado);
+    }
+
+    @Transactional
+    public void delete(Integer id) {
+        if (!avaliacaoRepository.existsById(id)) {
+            throw new RuntimeException("Avaliação não encontrada");
+        }
+        avaliacaoRepository.deleteById(id);
     }
 }
